tcw3/designer/tests/bad/input_circular2.tcwdl
pub comp crate::Comp2 {
    //~^ ERROR A circular dependency was detected
    const wm: tcw3_pal::Wm { pub set; }

    wire wire1: u32 = get!(wire2);
    wire wire2: u32 = get!(wire1);
}
